tests/errors/preprocessor/temporarily_unemployed/multifile/include/no_extension/two.c
// Header with no *.h extension

#ifndef H_TWO
#define H_TWO

int very_important_var = 0;


void first_file_func();

#endif
